# hil_odrive_chrono_ros2_control

./: .gitignore  README.md
install/chrono_flap_sim/share/chrono_flap_sim/launch/: sil_mode.launch.py
src/chrono_flap_sim/: CMakeLists.txt  README.md  package.xml
src/chrono_flap_sim/doc/: parallel_mode_observer.md
src/chrono_flap_sim/include/chrono_flap_sim/: shadow_pid_controller.hpp
src/chrono_flap_sim/launch/: sil_mode.launch.py
src/chrono_flap_sim/src/: chrono_flap_node.cpp
src/hil_odrive_ros2_control/: README.md  package.xml
src/hil_odrive_ros2_control/config/: controllers.yaml
src/hil_odrive_ros2_control/description/urdf/: motor.urdf.xacro  motor_sim.urdf.xacro
src/hil_odrive_ros2_control/launch/: motor_control.launch.py
src/odrive_ros2_control/: package.xml
src/odrive_velocity_pid/: CMakeLists.txt  README.md
src/odrive_velocity_pid/src/: velocity_pid_node.cpp
