<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chrono_flap_sim</name>
  <version>0.2.0</version>
  <description>Project Chrono motor+flap simulation node for ROS 2. Supports SIL (software-in-the-loop)
  and parallel modes. In SIL mode the node publishes sensor_msgs/JointState so the PID closes the
  loop through the simulation. In parallel mode the node shadows the real hardware for comparison.</description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>odrive_velocity_pid</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>hil_odrive_ros2_control</exec_depend>
  <exec_depend>odrive_velocity_pid</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
